--- a/Lesson 24.ipynb
+++ b/Lesson 24.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -97,76 +97,44 @@
        "20"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = abs(25-30)+abs(25-30)+abs(25-20)+abs(25-20)\n",
-    "x"
+    "observations  = make_array(30,30,20,20)\n",
+    "expected = make_array(25,25,25,25)\n",
+    "test_stat = sum(abs(observations-expected))\n",
+    "test_stat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# multinomial\n",
-    "my_multi=stats.multinomial(n=100,p=[.25,.25,.25,.25])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# want probability we got the results we got assuming hypothesis is true (p-value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-25-2116206f69a4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mtest_stat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtemp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
-     ]
+     "data": {
+      "text/plain": [
+       "0.1868"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "results = list(map(lambda x:test_stat(x,e),temp))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'results' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-26-6a9982ecdd32>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# note obs=20\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcount_nonzero\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresults\u001b[0m\u001b[1;33m>=\u001b[0m\u001b[0mobs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mnum_sim\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'results' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# note obs=20\n",
-    "np.count_nonzero(results>=obs)/num_sim"
+    "# test statistic distribution\n",
+    "ts_dist = []\n",
+    "for i in np.arange(10000): \n",
+    "    #simulation\n",
+    "    rs = stats.multinomial.rvs(100,(0.25,0.25,0.25,0.25),size=1)\n",
+    "    ts_dist = np.append(ts_dist,sum(abs(sum(rs)-25)))\n",
+    "# get p-value \n",
+    "# ... probability that we get data equal to or more extreme than our sample assuming the null is true\n",
+    "np.mean(ts>=test_stat)"
    ]
   },
   {
@@ -175,7 +143,7 @@
    "source": [
     "Step 4: Conclude\n",
     "\n",
-    "0.18383\n",
+    "0.1868\n",
     "the p-value is high as compared to an alpha of .05 so there insufficient evidence against our null hypothesis therefore we fail to reject the null."
    ]
   },
@@ -210,11 +178,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24.0"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# figure out for what values reject null\n"
+    "# figure out for what values reject null\n",
+    "crit_value = percentile(95,ts_dist)\n",
+    "crit_value"
    ]
   },
   {
@@ -226,31 +207,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4394"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "my_multinomial = stats.multinomial(100, p=[.3,.3,.2,.2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.random.seed(29)\n",
-    "num_sim = 10000\n",
-    "results_alt = list(map(lambda x:test_stat(x,e),my___.rvs(num_sim)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.count_nonzero(np.array(results_alt)>=26)/num_size"
+    "power = []\n",
+    "for i in np.arange(10000):\n",
+    "    rs = stats.multinomial.rvs(100,(.3,.3,.2,.2),size=1)\n",
+    "    power = np.append(power,sum(abs(sum(rs)-25)))\n",
+    "power\n",
+    "    # get p-value\n",
+    "np.mean(power>=crit_value)"
    ]
   },
   {
@@ -264,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "..."
+    "This is not a very reliable power. The test will only identify a false hypothesis roughly 43% of the time even though it was given to be false above. This may be due to the relatively small sample size of our data."
    ]
   },
   {
@@ -272,6 +250,35 @@
    "metadata": {},
    "source": [
     "Repeat this power calculation, but assume Joe collects 500 balls instead of 100. Note that you will have to obtain a new critical value. What does this tell you about power and sample size?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0617"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test statistic distribution\n",
+    "ts500_dist = []\n",
+    "for i in np.arange(10000): \n",
+    "    #simulation\n",
+    "    rs = stats.multinomial.rvs(500,(0.25,0.25,0.25,0.25),size=1)\n",
+    "    ts500_dist = np.append(ts500_dist,sum(abs(sum(rs)-(5*25))))\n",
+    "# get p-value \n",
+    "# ... probability that we get data equal to or more extreme than our sample assuming the null is true\n",
+    "crit500 = percentile(95, ts500_dist)\n",
+    "np.mean(ts500_dist>=crit500)"
    ]
   },
   {
@@ -285,63 +292,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_multinomial_2 = stats.multinomial(500, p=[.3,.3,.2,.2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'my_multinomial_2' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-27-ac72414cb108>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mseed\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m29\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mnum_sim\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m10000\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mresults_alt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mtest_stat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmy_multinomial_2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrvs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum_sim\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'my_multinomial_2' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "0.986"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.random.seed(29)\n",
-    "num_sim = 10000\n",
-    "results_alt = list(map(lambda x:test_stat(x,e),my_multinomial_2.rvs(num_sim)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'results_alt' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-28-0a26b3ff826a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcount_nonzero\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresults_alt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m>=\u001b[0m\u001b[1;36m26\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mnum_size\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'results_alt' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "np.count_nonzero(np.array(results_alt)>=26)/num_size"
+    "power_500 = []\n",
+    "for i in np.arange(10000):\n",
+    "    rs = stats.multinomial.rvs(500,(.3,.3,.2,.2),size=1)\n",
+    "    power_500 = np.append(power_500,sum(abs(sum(rs)-(25*5))))\n",
+    "power_500\n",
+    "    # get power\n",
+    "np.mean(power_500>=crit500)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The power is a lot higher now. Power is directly related to sample size."
+    "The power is a lot higher now. Power is directly related to sample size; power increases with an increase in sample size."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
